boolean query searching works, albiet super inefficient

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,5 +1,16 @@
 <html>
+    <head>
+        <meta charset='utf-8'>
+        <title>Help Me I'm Dumb</title>
+    </head>
     <body>
-        <h1>Mah html page</h1>
+        <h1>Help Me I'm Dumb</h1>
+        <input id='query-field' type="text">
+        <div id='results'>
+            <h2>Results</h2>
+            <ul id='result-list'>
+            </ul>
+        </div>
+        <script src="/index.js"></script>
     </body>
 </html>
