added total results count

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -8,6 +8,7 @@
         <input id='query-field' type="text">
         <div id='results'>
             <h2>Results</h2>
+            <span id='results-count'></span>
             <ul id='result-list'>
             </ul>
         </div>
