--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -2,11 +2,19 @@
     <head>
         <meta charset='utf-8'>
         <title>Help Me I'm Dumb</title>
+      <link rel="stylesheet" type = "text/css" href="help-me-im-dumb.css">
     </head>
     <body>
-        <h1>Help Me I'm Dumb</h1>
-        <input id='query-field' type="text">
-        <div id='results'>
+      <div class="topdiv">
+        <h1 class="txt-center">Help Me I'm Dumb</h1>
+        <div class= "wrapper">
+          <span>
+            Search HMID:
+          <input id='query-field' type="text">
+          </span>
+        </div>
+      </div>
+      <div id='results'>
             <h2>Results</h2>
             <span id='results-count'></span>
             <ul id='result-list'>
