--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
+
     <head>
         <meta charset='utf-8'>
         <title>Help Me I'm Dumb</title>
-      <link rel="stylesheet" type = "text/css" href="help-me-im-dumb.css">
+      <link rel="stylesheet" type="text/css" href="/help-me-im-dumb.css">
     </head>
     <body>
       <div class="topdiv">
