--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta charset='utf-8'>
         <title>Help Me I'm Dumb</title>
-      <link rel="stylesheet" type="text/css" href="/help-me-im-dumb.css">
+        <link rel="stylesheet" type="text/css" href="/help-me-im-dumb.css">
     </head>
     <body>
-      <div class="topdiv">
-        <h1 class="txt-center">Help Me I'm Dumb</h1>
-        <div class= "wrapper">
-          <span>
-            Search HMID:
-          <input id='query-field' type="text">
-          </span>
+        <div class="topdiv txt-center">
+            <h1 id='title-banner' class="txt-center">Help Me I'm Dumb</h1>
+            <div class= "wrapper">
+                <span>
+                    <label id='query-label'>Search HMID:</label> <input id='query-field' type="text">
+                </span>
+            </div>
         </div>
-      </div>
-      <div id='results'>
+        <div id='results'>
             <h2>Results</h2>
             <span id='results-count'></span>
             <ul id='result-list'>
