--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Help Me I'm Dumb</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/help-me-im-dumb.css">
     </head>
     <body>
