--- a/resources/public/help-me-im-dumb.css
+++ b/resources/public/help-me-im-dumb.css
@@ -1,21 +1,32 @@
 body {
-   margin: 0;
-   padding: 0;
-    font-family: Arial, "Sans-serif";
+   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
+}
+
+h2 {
+    font-family: 'Raleway', sans-serif;
+}
+
+#result-list {
+    font-family: 'Raleway', sans-serif;
 }
 
 div.topdiv {
     width: 100%;
     height: 150px;
+    padding-top: 5px;
     background-color: #353535;
 }
 
 #title-banner {
-    font-style: normal;
     color: white;
 }
 
 #query-label {
+    font-family: 'Raleway', sans-serif;
     color: white;
 }
 
